<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout style="@style/TitleBar" android:baselineAligned="true" android:id="@+id/titleBar">
    	<ImageView style="@style/TitleBarLogo"
            android:src="@drawable/loc_pin_white"
            android:scaleType="fitXY"/>
        
        <TextView style="@style/TitleBarText" android:id="@+id/title_text"/>
       
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />

        <ImageView style="@style/TitleBarSeparator" />
        
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/fdisconnected"
            android:id="@+id/btnConnect" 
            android:onClick="onToggleConnectionButtonClick"/>
    </LinearLayout>
    
	<LinearLayout android:orientation="vertical"
		          android:layout_width="fill_parent"
		          android:layout_height="wrap_content"
		          android:layout_weight="1"
		          android:padding="@dimen/padding">
        
		<LinearLayout android:orientation="horizontal"
		              android:layout_width="fill_parent"
		              android:layout_height="wrap_content"
		              android:layout_weight="1">

			<Button android:id="@+id/home_btn_map"
	                style="@style/HomeButton"
	                android:text="@string/home_map"
	                android:drawableTop="@drawable/home_btn_sel_map"
	                android:onClick="onMapButtonClick"/>
	                
            <Button android:id="@+id/home_btn_profile"
	                style="@style/HomeButton"
	                android:text="@string/home_profile"
	                android:drawableTop="@drawable/home_btn_sel_profile"
	                android:onClick="onProfileButtonClick"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
		              android:layout_width="fill_parent"
		              android:layout_height="wrap_content"
		              android:layout_weight="1">
		              
			<Button android:id="@+id/home_btn_nodes"
	                style="@style/HomeButton"
	                android:text="@string/home_nodes"
	                android:drawableTop="@drawable/home_btn_sel_nodes"
	                android:onClick="onGroupsButtonClick"/>
            
            <Button android:id="@+id/home_btn_friends"
	                style="@style/HomeButton"
	                android:text="@string/home_friends"
	                android:drawableTop="@drawable/home_btn_sel_friends"
	                android:onClick="onFriendsButtonClick"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
		              android:layout_width="fill_parent"
		              android:layout_height="wrap_content"
		              android:layout_weight="1">
		              
            <Button android:id="@+id/home_btn_settings"
	                style="@style/HomeButton"
	                android:text="@string/home_settings"
	                android:drawableTop="@drawable/home_btn_sel_settings"
	                android:onClick="onSettingsButtonClick"/>
	                
            <Button android:id="@+id/home_btn_help"
	                style="@style/HomeButton"
	                android:text="@string/home_help"
	                android:drawableTop="@drawable/home_btn_sel_help"
	                android:onClick="onHelpButtonClick"/>
        </LinearLayout>
    </LinearLayout>
 
    <LinearLayout style="@style/TitleBar" android:baselineAligned="true" 
    			  android:layout_height="30dp" android:id="@+id/bottomBar">
    </LinearLayout>
</LinearLayout>