<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:losha= "http://schemas.android.com/apk/res/ch.usi.inf.bp.losha"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent">
    
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/title_home"
            android:onClick="onHomeClick" />
            
        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" android:id="@+id/title_text"/>
        
        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:src="@drawable/title_refresh"
            android:onClick="onRefreshClick" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />
	</LinearLayout>
    
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:fillViewport="true" 
			android:id="@+id/scrollView">
	
		<LinearLayout android:layout_width="fill_parent"
					  android:layout_height="fill_parent"
					  android:orientation="vertical">
		
			<ch.usi.inf.bp.losha.utils.SectionLabel 
		   			android:layout_width="fill_parent"
		   			android:layout_height="wrap_content"
		   			losha:text="@string/profile_title" />
	   			
			<RelativeLayout android:layout_height="wrap_content" 
							android:layout_width="match_parent"
							android:orientation="horizontal"
							android:padding="@dimen/padding">
						   
				<LinearLayout android:layout_height="wrap_content" 
							  android:layout_width="wrap_content"
							  android:orientation="vertical"
							  android:layout_alignParentLeft="true"
							  android:layout_toLeftOf="@+id/imageView1"
						 	  android:layout_centerVertical="true"
							  android:layout_gravity="left"
							  android:id="@+id/friend_info">
							  
					<TextView android:layout_height="wrap_content"
							  android:layout_width="wrap_content"
							  android:textAppearance="?android:attr/textAppearanceLarge"
							  android:id="@+id/friend_name"
							  android:text="Loading.."
							  android:ellipsize="marquee"/>
							  
					<TextView android:layout_height="wrap_content"
							  android:layout_width="wrap_content"
							  android:id="@+id/friend_email"
							  android:ellipsize="marquee"
							  android:singleLine="true"
							  android:textAppearance="?android:attr/textAppearanceSmall"/>						  				  
				</LinearLayout>
				
				<ImageView android:id="@+id/userPicture"  
						   android:src="@drawable/avatar_not_found" 
						   android:layout_height="60dip" 
						   android:layout_width="60dip"
						   android:layout_alignParentRight="true"
						   android:layout_centerVertical="true" />
						   
			</RelativeLayout>
		
			<ch.usi.inf.bp.losha.utils.SectionLabel 
		   			android:layout_width="fill_parent"
		   			android:layout_height="wrap_content"
		   			losha:text="@string/location_title"
		   			losha:has_refresh="true" />
			
			<RelativeLayout android:layout_height="wrap_content" 
							android:layout_width="match_parent"
							android:orientation="vertical"
							android:padding="@dimen/padding">
		  
				<TextView android:layout_height="wrap_content"
						  android:layout_width="wrap_content"
						  android:id="@+id/friend_location_time"
						  android:layout_alignParentLeft="true"
						  android:layout_toLeftOf="@+id/location_button"
						  android:layout_below="@+id/friend_location" />
				
				<TextView android:layout_height="wrap_content"
						  android:layout_width="wrap_content"
						  android:id="@+id/friend_location" 
						  android:layout_alignParentLeft="true"
						  android:layout_alignParentTop="true"
						  android:layout_toLeftOf="@+id/location_button"
						  android:layout_alignWithParentIfMissing="true"
						  android:textAppearance="?android:attr/textAppearanceMedium" />	
						  
				<ImageButton android:layout_height="wrap_content"
							 android:layout_width="wrap_content"
							 android:layout_alignParentRight="true"
							 android:layout_centerVertical="true"
							 android:adjustViewBounds="true"
							 android:id="@+id/location_button"
							 android:src="@drawable/ic_menu_mylocation"
							 android:onClick="onLocationClick"
							 android:visibility="gone"/>
							 
			</RelativeLayout>
			
			<ch.usi.inf.bp.losha.utils.SectionLabel 
		   			android:layout_width="fill_parent"
		   			android:layout_height="wrap_content"
		   			losha:text="@string/sharing_node_title" />
	  		
	  		<LinearLayout android:layout_height="wrap_content" 
						  android:layout_width="match_parent"
						  android:orientation="vertical"
						  android:padding="@dimen/padding"
						  android:layout_weight="1">
	
				<Spinner android:id="@+id/friend_node_spinner"
						 android:layout_width="fill_parent"
						 android:layout_height="wrap_content"
						 android:prompt="@string/friend_node_prompt" />
				
				<TextView android:layout_height="wrap_content"
						  android:layout_width="wrap_content"
						  android:id="@+id/friend_node_desc"
						  android:ellipsize="marquee"
						  android:textAppearance="?android:attr/textAppearanceSmall" />
							  
			</LinearLayout>
			
			<LinearLayout
					android:id="@+id/accept_friendship"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
					android:padding="@dimen/padding"
		            android:background="@android:drawable/bottom_bar"
		            android:gravity="center_vertical"
		            android:visibility="gone">
		            
				<Button android:text="Accept Friendship" 
						android:layout_width="match_parent" 
						android:layout_height="wrap_content"
						android:onClick="onAcceptFriendshipClick"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>