<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:losha= "http://schemas.android.com/apk/res/ch.usi.inf.bp.losha"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  
  <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/title_home"
            android:onClick="onHomeClick" />
            
        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" android:id="@+id/title_text"/>
        
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />
	</LinearLayout>
	
	<ScrollView android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1" 
				android:fillViewport="true"
				android:id="@+id/scrollView">
	
		<LinearLayout android:layout_width="fill_parent"
					  android:layout_height="fill_parent"
					  android:orientation="vertical">
					  
			<ch.usi.inf.bp.losha.utils.SectionLabel
			   			android:layout_width="fill_parent"
			   			android:layout_height="wrap_content"
			   			android:layout_marginBottom="@dimen/padding"
			   			losha:text="Title"
			   			android:id="@+id/node_title" />
			
			<LinearLayout android:layout_width="fill_parent"
						  android:layout_height="wrap_content"
						  android:orientation="vertical"
						  android:gravity="center_horizontal"
						  android:paddingLeft="@dimen/padding"
						  android:paddingRight="@dimen/padding">
	  
				<TextView android:layout_height="wrap_content" 
						  android:layout_width="fill_parent"
						  android:text="Granularity:" 
						  android:layout_marginLeft="@dimen/padding"/>
				  
				<Spinner 
						android:id="@+id/granularity_spinner"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:prompt="@string/create_node_gran_prompt"/>
					
				<LinearLayout 
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:id="@+id/granularity_custom_radius"
						android:visibility="gone">
					
					<TextView 
							android:layout_height="wrap_content" 
							android:layout_width="fill_parent"
							android:text="@string/create_node_meters" 
							android:layout_marginLeft="@dimen/padding"/>
					  
					<EditText 
							android:id="@+id/granularity_custom_meters"
							android:inputType="textNoSuggestions|number"
							android:layout_width="match_parent"
							android:layout_height="wrap_content" />
					
					
				</LinearLayout>
				<TextView  android:id="@+id/create_node_gran_desc"
				            android:layout_width="wrap_content" 
				            android:layout_height="wrap_content" 
				            android:paddingLeft="@dimen/padding"
				            android:paddingRight="@dimen/padding"
				            android:text="@string/create_node_gran_desc"
				            android:layout_marginBottom="@dimen/padding"/> 	
				            
			</LinearLayout>
			
			<ch.usi.inf.bp.losha.utils.SectionLabel
			   			android:layout_width="fill_parent"
			   			android:layout_height="wrap_content"
			   			android:layout_marginBottom="@dimen/padding"
			   			losha:text="Filters" />
			 
			<TextView   android:layout_width="wrap_content" 
			            android:layout_height="wrap_content" 
			            android:paddingLeft="@dimen/padding"
			            android:paddingRight="@dimen/padding"
			            android:paddingBottom="@dimen/padding"
			            android:text="Share your location with members of this group only when you are near a specific place (radius to it) and/or during a specific interval of time."/>

			<View android:id="@+id/Separator"
						  android:layout_width="match_parent"
						  android:layout_height="0.5dp"
						  android:background="?android:attr/listDivider" />
 			
			<LinearLayout android:layout_width="fill_parent"
						  android:layout_height="wrap_content"
						  android:layout_weight="1"
						  android:orientation="vertical"
						  android:gravity="center_horizontal"
						  android:paddingLeft="@dimen/padding"
						  android:paddingRight="@dimen/padding"
						  android:layout_marginBottom="@dimen/padding">
				
				<ch.usi.inf.bp.losha.utils.CheckboxSetting
						android:id="@+id/areaFilterCheck"
						android:layout_width="fill_parent"
			   			android:layout_height="wrap_content"
			   			losha:text="Area Filter"
			   			losha:checked_text="Pick a location.."
			   			losha:unchecked_text="Disabled"/>
			   	
			   	<LinearLayout android:id="@+id/areaFilter"
			    		  android:layout_width="fill_parent"
						  android:layout_height="wrap_content"
						  android:orientation="vertical"
						  android:gravity="center_horizontal"
						  android:visibility="gone">
						  
				   	<LinearLayout android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  android:orientation="horizontal"
							  android:gravity="center_horizontal" >
							  
						<EditText android:layout_width="match_parent"
							  	  android:layout_height="wrap_content"
									android:id="@+id/latitude"
									  android:singleLine="true"
									  android:hint="@string/latitude"
									  android:inputType="numberDecimal"
									  android:imeOptions="actionNext" 
									  android:layout_weight="0.4"/>
							
						<EditText android:layout_width="match_parent"
							  	  android:layout_height="wrap_content"
							  	  android:id="@+id/longitude"
									  android:singleLine="true"
									  android:hint="@string/longitude"
									  android:inputType="numberDecimal"
									  android:imeOptions="actionDone"
									  android:layout_gravity="center_vertical" 
									  android:layout_weight="0.4"/>
						
					</LinearLayout>	
					
					<LinearLayout android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  android:orientation="horizontal"
							  android:gravity="center_horizontal" 
							  android:paddingBottom="@dimen/padding">
						
						<EditText android:layout_width="match_parent"
							  	  android:layout_height="wrap_content"
									android:id="@+id/radius_dist"
									  android:singleLine="true"
									  android:hint="Radius (meters)"
									  android:inputType="numberDecimal"
									  android:imeOptions="actionNext" 
									  android:layout_weight="0.4"/>
									  
						<Button android:layout_width="match_parent"
							  	 android:layout_height="wrap_content"
							  	 android:adjustViewBounds="true"
								android:drawableRight="@drawable/ic_menu_mylocation"
								android:layout_gravity="center_vertical"
								android:onClick="onSelectLocationClick"
							    android:layout_weight="0.4"
							    android:text="Find on Map"/>
					</LinearLayout>
				</LinearLayout>
				<View android:id="@+id/Separator"
						  android:layout_width="match_parent"
						  android:layout_height="0.5dp"
						  android:background="?android:attr/listDivider" />
						  
				<ch.usi.inf.bp.losha.utils.CheckboxSetting
						android:id="@+id/timeFilterCheck"
						android:layout_width="fill_parent"
			   			android:layout_height="wrap_content"
			   			losha:text="Time Filter"
			   			losha:checked_text="Pick an interval.."
			   			losha:unchecked_text="Disabled"/>
			    
			    <LinearLayout android:id="@+id/timeFilter"
			    		  android:layout_width="fill_parent"
						  android:layout_height="wrap_content"
						  android:orientation="vertical"
						  android:gravity="center_horizontal"
						  android:visibility="gone">
						  			
				   	<TextView android:layout_height="wrap_content" 
							  android:layout_width="fill_parent"
							  android:text="From:" 
							  android:layout_marginLeft="@dimen/padding"/>
					
					<LinearLayout android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  android:orientation="horizontal"
							  android:gravity="center_horizontal">
							  
						<EditText android:id="@+id/fromTime"
								  android:layout_width="match_parent"
								  android:layout_height="wrap_content"
								  android:singleLine="true"
								  android:maxLines="1"
								  android:ellipsize="end"
								  android:imeOptions="actionNext"
								  android:layout_weight="0.2" />
								  		  
						<Button android:layout_width="match_parent"
							  	android:layout_height="wrap_content"
							  	android:adjustViewBounds="true"
								android:layout_gravity="center_vertical"
								android:onClick="onSelectFromTime"
								android:layout_weight="0.6"
								android:text="Pick"/>
					</LinearLayout>
					<TextView android:layout_height="wrap_content" 
							  android:layout_width="fill_parent"
							  android:text="To:" 
							  android:layout_marginLeft="@dimen/padding"/>
					
					<LinearLayout android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  android:orientation="horizontal"
							  android:gravity="center_horizontal">
							  
						<EditText android:id="@+id/toTime"
								  android:layout_width="match_parent"
								  android:layout_height="wrap_content"
								  android:singleLine="true"
								  android:maxLines="1"
								  android:ellipsize="end"
								  android:imeOptions="actionNext"
								  android:layout_weight="0.2" />
								  		  
						<Button android:layout_width="match_parent"
							  	android:layout_height="wrap_content"
							  	android:adjustViewBounds="true"
								android:layout_gravity="center_vertical"
								android:onClick="onSelectToTime"
								android:layout_weight="0.6"
								android:text="Pick"/>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
			              android:layout_height="wrap_content"
						  android:padding="@dimen/padding"
						  android:layout_marginTop="@dimen/padding"
			              android:background="@android:drawable/bottom_bar"
			              android:gravity="center_vertical"
			              android:layout_gravity="bottom|center">
		            
					<Button android:textSize="20sp"
							android:id="@+id/saveButton"
							android:text="Save" 
							android:layout_width="match_parent" 
							android:layout_height="wrap_content"
							android:onClick="onSaveClick"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>